Fixed some layout bugs

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ body {
     grid-template: var(--main-grid-template);
     height: 100vh;
     font-family: mainFont;
+    /* width: 80vw; */
 }
 
 @font-face {
@@ -103,7 +104,7 @@ ul>li:hover {
 .sidebar-container {
     grid-row: 1 / 3;
     grid-column: 1 / 2;
-    padding: var(--main-padding);
+    padding: clamp(2rem, 2.5vw, 3rem);
     color: #e2e7f1;
     background-color: #1d93f8;
 
@@ -151,7 +152,7 @@ ul li {
     grid-column: 2 / 3;
 
     display: grid;
-    grid-template-columns: 5fr 1fr 1fr 1fr;
+    grid-template-columns: 5fr repeat(4, 1fr);
     padding-inline: 20px;
     box-shadow: 1px 5px 5px 1px rgba(0, 0, 0, 0.1);
     z-index: 1;
@@ -252,21 +253,21 @@ ul li {
 .main-container {
     position: relative;
     background-color: var(--main-bg-color);
-    padding: 0px 20px 10px 20px;
+    padding: clamp(2rem, 2.5vw, 3rem);
 
     display: grid;
     grid-template-columns: 3fr 1fr;
 }
 
-.projects-container {
+.card-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
 
 .projects-container h1,
 .aside h1 {
-    display: grid;
-    grid-column: 1 / 3;
+    /* display: grid;
+    grid-column: 1 / 3; */
     font-size: var(--default-font-size);
     font-weight: 900;
     margin-left: 8px;
@@ -306,7 +307,6 @@ ul li {
 .aside {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 .announcements-container,
